--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -357,7 +357,32 @@
     "    inicio = final -1\n",
     "    final = final + len(Percentage_lockoff_step)\n",
     "    Load_lockoff_step        = Carga[inicio:final]\n",
-    "    def_lockoff_step         = Deformation[inicio:final]\n",
+    "    def_lockoff_step = Deformation[inicio:final]\n",
+    "    \n",
+    "    indice_inicio = next((i for i, valor in enumerate(def_lockoff_step[1:]) if valor > 0), None)\n",
+    "\n",
+    "\n",
+    "    if indice_inicio is not None:\n",
+    "        slope_reload , intercept_reload , _, _ , _ = linregress(def_reload_step[-3:] , Load_reload_step[-3:])\n",
+    "        x_lockoff = (Load_lockoff_step[1] - intercept_reload) / slope_reload\n",
+    "        #lect_lockoff = (x_lockoff / float(Division.get())) + float(zero.get())\n",
+    "        #Delta = float(Val_Lect[19].get()) - lect_lockoff\n",
+    "        print(slope_reload , intercept_reload)\n",
+    "        \n",
+    "        raiz = x_lockoff\n",
+    "\n",
+    "        for Aux_Lect, Aux_Deformation in zip(Val_Lect[inicio+1:], Val_Deformation[inicio+1:]):\n",
+    "            Aux_texto_Deformation = round((float(Aux_Lect.get()) - float(zero.get())) * float(Division.get()),2) # El contenido de la etiqueta son cadenas, lo pasamos a flotante\n",
+    "            #Aux = round((float(Aux_Lect.get()) - Delta - float(zero.get())) * float(Division.get()), 2)       \n",
+    "\n",
+    "            Aux = round(x_lockoff - (float(Val_Lect[inicio+1].get()) - float(Aux_Lect.get())) * float(Division.get())  ,2)\n",
+    "\n",
+    "            # Aquí utilizamos el método config para actualizar la etiqueta Aux_Deformation\n",
+    "            Aux_Deformation.config(text=f\"{Aux_texto_Deformation} ({Aux})\")\n",
+    "\n",
+    "            Deformation.append(Aux)\n",
+    "\n",
+    "        def_lockoff_step = Deformation[inicio:final]\n",
     "\n",
     "    print(\"Lecturas ingresadas:\", Deformation)\n",
     "    print(\"Cargas ingresadas:\", Carga)\n",
@@ -383,7 +408,7 @@
     {
      "data": {
       "text/plain": [
-       "'2279059473344actualizar_texto'"
+       "'2642379590976actualizar_texto'"
       ]
      },
      "execution_count": 12,
@@ -697,154 +722,126 @@
       "[126.0, 210.0, 420.0, 630.0, 798.0, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "[0.0, 43.757]\n",
-      "[0.0, 50.407000000000004]\n",
-      "[0.0, 57.057]\n",
-      "[0.0, 63.707]\n",
-      "[0.0, 70.357]\n",
-      "Lecturas ingresadas: [0.0, 8.04, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, -12.23, -12.23, -12.23, -12.23]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[-12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, 16.77, 20.24, -12.23, -12.23]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[-12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.69, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.69]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[50.69, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.69, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.69]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[50.69, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[50.46, 50.46, 50.52, 50.65, 50.67, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
-      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
-      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
-      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
-      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
-      "[50.46, 50.46, 50.52, 50.65, 50.67, -12.23]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 41.429500000000004]\n",
+      "[0.0, 48.0795]\n",
+      "[0.0, 54.7295]\n",
+      "[0.0, 61.37949999999999]\n",
+      "[0.0, 68.0295]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
       "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, -12.23, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
       "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, -12.23, -12.23, -12.23, -12.23, -12.23]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
       "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, -12.23, -12.23, -12.23, -12.23]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, -12.23, -12.23, -12.23]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "17.316596008854695 -45.39251108878398\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, -12.23, -12.23, -12.23, 48.7, -14.22, -14.22, -14.22]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n",
-      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, 32.56, -12.23, -12.23]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "17.316596008854695 -45.39251108878398\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, 32.56, -12.23, -12.23, 48.7, 30.57, -14.22, -14.22]\n",
       "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
       "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
       "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
       "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
       "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
-      "[0.0, 43.75151666666666]\n",
-      "[0.0, 50.40068333333334]\n",
-      "[0.0, 57.04985]\n",
-      "[0.0, 63.699016666666665]\n",
-      "[0.0, 70.34818333333334]\n"
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "17.316596008854695 -45.39251108878398\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, 32.56, 30.83, -12.23, 48.7, 30.57, 28.84, -14.22]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "17.316596008854695 -45.39251108878398\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 50.69, 32.56, 30.83, 28.52, 48.7, 30.57, 28.84, 26.53]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n",
+      "17.316596008854695 -45.39251108878398\n",
+      "Lecturas ingresadas: [0.0, 8.04, 16.77, 20.24, 37.06, 50.46, 50.46, 50.52, 50.65, 50.67, 50.67, 50.39, 45.92, 39.31, 31.7, 33.09, 38.57, 44.72, 50.69, 32.56, 30.83, 28.52, 27.09, 48.7, 46.97, 44.66, 43.23]\n",
+      "Cargas ingresadas: [125.9, 210.1, 420.1, 629.9, 797.9, 840.0, 840.0, 840.0, 840.0, 840.0, 840.0, 714.0, 629.9, 546.0, 420.1, 546.0, 629.9, 714.0, 840.0, 797.9, 672.0, 588.1, 504.0]\n",
+      "[0.0, 8.04, 16.77, 20.24, 37.06, 50.46]\n",
+      "[125.9, 210.1, 420.1, 629.9, 797.9, 840.0]\n",
+      "[840.0, 840.0, 840.0, 840.0, 840.0, 840.0]\n",
+      "[50.46, 50.46, 50.52, 50.65, 50.67, 50.67]\n",
+      "[0.0, 41.424308333333336]\n",
+      "[0.0, 48.073474999999995]\n",
+      "[0.0, 54.72264166666667]\n",
+      "[0.0, 61.371808333333334]\n",
+      "[0.0, 68.02097499999999]\n"
      ]
     }
    ],
