--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -25,12 +25,14 @@
     "import  tkinter             as tk\n",
     "import  matplotlib.pyplot   as plt\n",
     "from    matplotlib.backends.backend_tkagg import FigureCanvasTkAgg , NavigationToolbar2Tk #Realizar gráficos en tkinter con la librería plt\n",
-    "from    PIL                 import ImageTk, Image # Cargar imagenes a la ventana\n",
+    "from    PIL                 import ImageTk, Image , ImageGrab # Cargar imagenes a la ventana\n",
     "import  numpy               as np\n",
     "from    math                import *\n",
     "import  pandas              as pd\n",
     "from tkinter.font import Font\n",
-    "from scipy.stats import linregress"
+    "from scipy.stats import linregress\n",
+    "import sqlite3\n",
+    "from tkinter import messagebox"
    ]
   },
   {
@@ -100,11 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Label_nombre_anclaje          = Label(frm, text=\"ID Anclaje\" , font=font_label).grid(column=0 , row= 0)         \n",
-    "Entry_nombre_anclaje          = Entry(frm , justify='center').grid(column=1 , row= 0)\n",
+    "Label_id_anclaje          = Label(frm, text=\"ID Anclaje\" , font=font_label).grid(column=0 , row= 1)         \n",
+    "Entry_id_anclaje          = ttk.Combobox(frm , justify='center')\n",
+    "Entry_id_anclaje.grid(column=1 , row= 1)\n",
     "\n",
-    "Label_Nivel                   = Label(frm, text=\"Nivel\" , font=font_label).grid(column=0 , row= 1)\n",
-    "Entry_nivel                   = Entry(frm, justify='center').grid(column=1 , row= 1)\n",
+    "Label_Nivel                   = Label(frm, text=\"Nivel\" , font=font_label).grid(column=0 , row= 2)\n",
+    "Entry_nivel                   = Entry(frm, justify='center')\n",
+    "Entry_nivel.grid(column=1 , row= 2)\n",
     "\n",
     "Division                      = DoubleVar()\n",
     "Division.set(0.01)\n",
@@ -113,7 +117,8 @@
     "Entry_Division.grid(column=5 , row=0)\n",
     "\n",
     "Label_Fecha                   = Label(frm, text='Fecha' , font=font_label).grid(column=4 , row=1)\n",
-    "Entry_Fecha                   = Entry(frm , justify='center').grid(column=5 , row=1)\n",
+    "Entry_Fecha                   = Entry(frm , justify='center')\n",
+    "Entry_Fecha.grid(column=5 , row=1)\n",
     "\n",
     "Percentage_load_step          = [0.15 , 0.25 , 0.50 , 0.75 , 0.95 , 1.00]\n",
     "Percentage_creep_step         = [1.00 , 1.00 , 1.00 , 1.00 , 1.00]            \n",
@@ -401,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "'2558007881280actualizar_texto'"
+       "'2619920976384actualizar_texto'"
       ]
      },
      "execution_count": 12,
@@ -757,34 +762,7 @@
     "            Entry_creep_reload.insert(0 , f\"No Verifica ({subtract}mm)\" )\n",
     "            Entry_creep_reload.config(foreground='red')\n",
     "    \n",
-    "\n",
-    "    #if len(conjunto) != len(def_lockoff_step): \n",
-    "    #    pass\n",
-    "    #else:\n",
-    "    #    # Friction\n",
-    "    #    slope_download , intercept_download , _, _ , _ = linregress(def_download_step[-3:] , Load_download_step[-3:])\n",
-    "    #    slope_reload , intercept_reload , _, _ , _     = linregress(def_reload_step[-3:] , Load_reload_step[-3:])\n",
-    "#\n",
-    "    #    slope_average = (slope_download + slope_reload) / 2\n",
-    "    #    intercept_average = (intercept_download + intercept_reload) / 2\n",
-    "#\n",
-    "    #    Aux = def_download_step[0] * slope_download + intercept_download\n",
-    "#\n",
-    "    #    load_real = def_lockoff*slope_average + intercept_average\n",
-    "#\n",
-    "    #    friction = round(((Load_download_step[0] - Aux) / (2* load_real)) * 100 , 1)\n",
-    "    #    Entry_friction.delete(0,END)\n",
-    "    #    Entry_friction.insert(0 , friction )\n",
-    "#\n",
-    "    #    # Wedge income\n",
-    "    #    wedge_income = round(x_lockoff - def_lockoff , 2 )\n",
-    "    #    Entry_wedge_income.delete(0,END)\n",
-    "    #    Entry_wedge_income.insert(0 , f\"{wedge_income} mm\" )\n",
-    "\n",
-    "\n",
     "    if isinstance(pivot , np.float64): \n",
-    "        conjunto = set(def_lockoff_step)\n",
-    "        print(pivot)\n",
     "        if all(valor != pivot for valor in def_lockoff_step):\n",
     "        #if len(conjunto) == len(def_lockoff_step): \n",
     "        # Friction\n",
@@ -806,7 +784,6 @@
     "        else:\n",
     "            pass\n",
     "    else:\n",
-    "        print(\"nop\")\n",
     "        pass"
    ]
   },
@@ -851,6 +828,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def insertar_ensayo(cursor, nombre, fecha, Division, nivel):\n",
+    "    cursor.execute(\"INSERT INTO ensayos (nombre, fecha, Division, nivel) VALUES (?, ?, ?, ?)\", (nombre, fecha, Division, nivel)) # ensayo en el nombre del database\n",
+    "    return cursor.lastrowid\n",
+    "\n",
+    "def actualizar_combobox_ensayos():\n",
+    "    cursor.execute(\"SELECT nombre FROM ensayos\")\n",
+    "    ensayos = cursor.fetchall()\n",
+    "    \n",
+    "    ensayos_nombres = [ensayo[0] for ensayo in ensayos]\n",
+    "    Entry_id_anclaje['values'] = ensayos_nombres\n",
+    "\n",
+    "def mostrar_datos_ensayo():\n",
+    "    seleccion = Entry_id_anclaje.get()\n",
+    "    cursor.execute(\"SELECT nombre, fecha, Division, nivel FROM ensayos WHERE nombre=?\", (seleccion,))\n",
+    "    datos = cursor.fetchone()\n",
+    "\n",
+    "    if datos:\n",
+    "        Entry_nivel.delete(0, tk.END)\n",
+    "        Entry_nivel.insert(0, datos[3])\n",
+    "        \n",
+    "        Entry_id_anclaje.set(datos[0])  # Establece el nombre del ensayo en el Combobox\n",
+    "        \n",
+    "        Entry_Division.delete(0, tk.END)\n",
+    "        Entry_Division.insert(0, str(datos[2]))\n",
+    "        \n",
+    "        Entry_Fecha.delete(0, tk.END)\n",
+    "        Entry_Fecha.insert(0, str(datos[1]))\n",
+    "\n",
+    "def guardar_ensayo():   \n",
+    "    nombre = Entry_id_anclaje.get()\n",
+    "    fecha = Entry_Fecha.get()\n",
+    "    Division = Entry_Division.get()\n",
+    "    nivel = Entry_nivel.get()\n",
+    "\n",
+    "    if  nombre and fecha and Division and nivel:\n",
+    "        # Comprobar si el nombre ya existe en la base de datos\n",
+    "        cursor.execute(\"SELECT COUNT(*) FROM ensayos WHERE nombre=?\", (nombre,))\n",
+    "        existe = cursor.fetchone()[0]\n",
+    "\n",
+    "        if existe > 0:\n",
+    "            messagebox.showwarning(\"Advertencia\", \"El nombre del ensayo ya existe. Utiliza un nombre diferente.\")\n",
+    "        else:\n",
+    "            insertar_ensayo(cursor, nombre, fecha, Division, nivel)\n",
+    "            conexion.commit()\n",
+    "            actualizar_combobox_ensayos()\n",
+    "            messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "    else:\n",
+    "        messagebox.showerror(\"Error\", \"Por favor, complete todos los campos.\")\n",
+    "\n",
+    "#app = tk.Tk()\n",
+    "#app.title(\"Aplicación de Ensayos\")\n",
+    "\n",
+    "conexion = sqlite3.connect('ensayos.db')\n",
+    "cursor = conexion.cursor()\n",
+    "\n",
+    "cursor.execute('''\n",
+    "    CREATE TABLE IF NOT EXISTS ensayos (\n",
+    "        id INTEGER PRIMARY KEY,\n",
+    "        nombre TEXT UNIQUE, -- Asegura que el nombre sea único\n",
+    "        fecha TEXT,\n",
+    "        Division REAL,\n",
+    "        nivel REAL\n",
+    "    )\n",
+    "''')\n",
+    "\n",
+    "actualizar_combobox_ensayos()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -859,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +919,13 @@
     "Button_1 = Button(frm, text=\"Cerrar\", command=root.destroy).grid(column=9, row=0)\n",
     "\n",
     "# Generar boton de grafico\n",
-    "Button_2 = Button(frm, text=\"Graficar\" , command=Funciones).grid(column=10,row=0)"
+    "Button_2 = Button(frm, text=\"Graficar\" , command=Funciones).grid(column=10,row=0)\n",
+    "\n",
+    "# Save data\n",
+    "guardar_button = tk.Button(frm, text=\"Guardar Ensayo\" , command=guardar_ensayo).grid(column=0 , row=0) # \n",
+    "\n",
+    "#show data\n",
+    "mostrar_button = tk.Button(frm, text=\"Ver\" , command=mostrar_datos_ensayo).grid(column=1 , row=0) # \n"
    ]
   },
   {
@@ -879,43 +937,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nop\n",
-      "nop\n",
-      "nop\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jjeri\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\scipy\\stats\\_stats_mstats_common.py:170: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  slope = ssxym / ssxm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nop\n",
-      "3.91\n",
-      "3.91\n",
-      "3.91\n",
-      "3.91\n",
-      "3.91\n",
-      "3.91\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root.mainloop() # Este método hará un bucle eterno, esperando eventos del usuario, hasta que el usuario salga del programa...\n",
-    "                # ... ya sea cerrando la ventana, o terminando el programa con una interrupción de teclado en la consola."
+    "                # ... ya sea cerrando la ventana, o terminando el programa con una interrupción de teclado en la consola.\n",
+    "conexion.close()"
    ]
   }
  ],
