--- a/App_Anchors.ipynb
+++ b/App_Anchors.ipynb
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "'2236846519936actualizar_texto'"
+       "'1771498590528actualizar_texto'"
       ]
      },
      "execution_count": 13,
@@ -486,11 +486,11 @@
     "    Test_load.set(float(Test_coefficient.get())*float(Carga_servicio.get()))\n",
     "\n",
     "    for Aux_Carga, i , Aux_Presion in zip(Val_Carga , Percentage, Val_Presion ):\n",
-    "        texto = round(Test_load.get()*i , 2)                  # Obtener el texto del Entry\n",
-    "        Aux_Carga.config(text=texto)                        # Actualizar el texto de la Label\n",
-    "        texto_1 = round(texto / area_gato.get() * 100 , 1 )   # Redondear a un decimal\n",
-    "        Aux_Presion.delete(0,END) # deletes the contents of the entry\n",
-    "        Aux_Presion.insert(0,texto_1) # Insert the new value\n",
+    "        texto = round(Test_load.get()*i , 2)                    # Obtener el texto del Entry\n",
+    "        Aux_Carga.config(text=texto)                            # Actualizar el texto de la Label\n",
+    "        texto_1 = round(texto / area_gato.get() * 100 , 1 )     # Redondear a un decimal\n",
+    "        Aux_Presion.delete(0,END)                               # deletes the contents of the entry\n",
+    "        Aux_Presion.insert(0,texto_1)                           # Insert the new value\n",
     "\n",
     "          \n",
     "# Asociar la tecla Enter con la función de actualización\n",
@@ -842,12 +842,10 @@
     "# cursor. execute crea la tabla y permite realizar operaciones en la base de datos\n",
     "cursor.execute('''                       \n",
     "    CREATE TABLE IF NOT EXISTS ensayos (\n",
-    "        id INTEGER PRIMARY KEY,\n",
     "        nombre TEXT , -- Asegura que el nombre sea único\n",
     "        fecha TEXT,\n",
     "        Division REAL,\n",
     "        nivel REAL,\n",
-    "        gato REAL,\n",
     "        area_gato REAL,\n",
     "        coeficiente_ensayo REAL,\n",
     "        service_load REAL,\n",
@@ -864,6 +862,22 @@
     "    )\n",
     "''')\n",
     "\n",
+    "\n",
+    "Number = []\n",
+    "for i in range(1,len(Val_label)+1):\n",
+    "    Aux = \"Pressure\" + str(i)\n",
+    "    Number.append(Aux)\n",
+    "\n",
+    "if conexion is not None:\n",
+    "    pass\n",
+    "else:\n",
+    "    for columna in Number:\n",
+    "        cursor.execute(f\"ALTER TABLE ensayos ADD COLUMN {columna} TEXT\")\n",
+    "    \n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "def insertar_ensayo(cursor,nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,\n",
     "    Modulus_elasticity):\n",
     "    cursor.execute(\"INSERT INTO ensayos (nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo , service_load , test_load , LL , LB , LC ,\"\n",
@@ -871,6 +885,16 @@
     "    \"VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)\", \n",
     "    (nombre,fecha,Division,nivel,area_gato,coeficiente_ensayo,service_load,test_load,LL,LB,LC,diameter_drillhole,steel_data,Area_steel_total,Modulus_elasticity) )\n",
     "    # ensayo en el nombre del database\n",
+    "\n",
+    "    # Obtengo los valores las etiquetas de presión\n",
+    "    valores = [etiqueta.cget(\"text\") for etiqueta in Val_label]\n",
+    "\n",
+    "    # Actualiza la fila en la tabla\n",
+    "    consulta_sql = f\"UPDATE ensayos SET {', '.join([f'{columna} = ?' for columna in Number])} WHERE nombre = ?\"\n",
+    "    valores_actualizacion = valores + [nombre]\n",
+    "    cursor.execute(consulta_sql, valores_actualizacion)\n",
+    "    conexion.commit()\n",
+    "\n",
     "    return cursor.lastrowid #Esta función devuelve el ID de la última fila insertada en la tabla. Esto es útil si necesitas obtener el ID del registro recién insertado.\n",
     "\n",
     "\n",
@@ -908,27 +932,34 @@
     "        if respuesta == \"yes\":\n",
     "            # Elimina el registro existente\n",
     "            cursor.execute(\"DELETE FROM ensayos WHERE nombre=?\", (nombre,))\n",
-    "            conexion.commit()\n",
     "        \n",
-    "        # Realiza la inserción del nuevo registro\n",
     "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
+    "        \n",
     "        conexion.commit()\n",
     "        actualizar_combobox_ensayos()\n",
     "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
+    "\n",
     "    else:\n",
     "        # Realiza la inserción si no se desea sobrescribir\n",
-    "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)\n",
-    "        conexion.commit()\n",
+    "        insertar_ensayo(cursor, nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo, service_load, test_load, LL, LB, LC, diameter_drillhole, steel_data, Area_steel_total, Modulus_elasticity)     \n",
+    "\n",
+    "\n",
+    "        \n",
+    "        conexion.commit() # se utiliza en Python cuando trabajas con bases de datos para confirmar (o \"commitear\") los cambios realizados en la base de dato\n",
     "        actualizar_combobox_ensayos()\n",
+    "\n",
     "        messagebox.showinfo(\"Éxito\", \"Ensayo guardado con éxito.\")\n",
-    "    #else:\n",
-    "    #    messagebox.showerror(\"Error\", \"Por favor, complete todos los campos.\")\n",
+    "\n",
+    "        \n",
+    "\n",
     "\n",
     "def mostrar_datos_ensayo():\n",
     "    seleccion = Entry_id_anclaje.get()\n",
-    "    cursor.execute(\"SELECT nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo , service_load , test_load, LL , LB , LC , diameter_drillhole\"\n",
-    "    \",steel_data,Area_steel_total,Modulus_elasticity \"\n",
-    "    \" FROM ensayos WHERE nombre=?\", (seleccion,))\n",
+    "    #columnas_sql = \", \".join([f\"{col} = :{col}\" for col in Number])\n",
+    "    #cursor.execute(\"SELECT nombre, fecha, Division, nivel, area_gato, coeficiente_ensayo , service_load , test_load, LL , LB , LC , diameter_drillhole\"\n",
+    "    #\",steel_data,Area_steel_total,Modulus_elasticity , {columnas_sql}\"\n",
+    "    #\" FROM ensayos WHERE nombre=?\", (seleccion,))\n",
+    "    cursor.execute(\"SELECT * FROM ensayos WHERE nombre=?\" , (seleccion,))\n",
     "    datos = cursor.fetchone()\n",
     "\n",
     "    if datos:      \n",
@@ -976,6 +1007,9 @@
     "        Entry_Modulus_elasticity.delete(0, tk.END)\n",
     "        Entry_Modulus_elasticity.insert(0, datos[14])\n",
     "\n",
+    "        for aux, i in zip(Val_label,range(15,15+len(Val_label))):\n",
+    "            #aux.delete(0,tk.END)\n",
+    "            aux.config(text=f\"{datos[i]}\" )\n",
     "        \n",
     "\n",
     "\n",
